# dockerfile_python_template

./: .gitignore  Dockerfile  LICENSE  README.md  Readme.md  compose.yml  entrypoint.sh  flask_app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  python-package.yml
dockerfile_python_template/: __init__.py  main.py
src/dockerfile_python_template/utils/: misc.py
